--- a/HTML/Link/pages/about.html
+++ b/HTML/Link/pages/about.html
@@ -3,22 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HOME</title>
+    <title>ABOUT</title>
 </head>
 <body>
     <nav>
-        <a href="index.html">HOME</a> |
-        <a href="pages/services.html">SERVICES</a> |
-        <a href="pages/about.html">ABOUT</a> |
-        <a href="pages/contact.html">CONTACT</a>
+        <a href="../index.html">HOME</a> |
+        <a href="services.html">SERVICES</a> |
+        <a href="about.html">ABOUT</a> |
+        <a href="contact.html">CONTACT</a>
     </nav>
 
     <header>
-        <h1>This is HOME Page</h1>
-        <img src="images/Home-image.webp" alt="home-image">
-        <div>
-            <h2>Hello</h2>
-        </div>
+        <h1>This is About Page</h1>
+        <img src="../images/about-image.jpg" alt="about-image">
     </header>
 
     <div>
