--- a/HTML/Link/pages/contact.html
+++ b/HTML/Link/pages/contact.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <nav>
-        <a href="index.html">HOME</a> |
-        <a href="pages/services.html">SERVICES</a> |
+        <a href="../index.html">HOME</a> |
+        <a href="services.html">SERVICES</a> |
         <a href="about.html">ABOUT</a> |
         <a href="contact.html">CONTACT</a>
     </nav>
