--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Assignment</title>
 </head>
 <body>
-    <h1>My Name is Min Pyae</h1>
-    <h1>I live in Mandalay</h1>
+    <h1>Hein Learn Assignment</h1>
+    <ol type="1">
+        <li><a href="HTML/Link/index.html">Link Assignment</a></li>
+    </ol>
 </body>
 </html>
