--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>Hein Learn Assignment</h1>
     <ol type="1">
         <li><a href="HTML/Link/index.html">Link Assignment</a></li>
+        <li><a href="HTML/table-assignment.html">Table Assignment</a></li>
     </ol>
 </body>
 </html>
