--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ol type="1">
         <li><a href="HTML/Link/index.html">Link Assignment</a></li>
         <li><a href="HTML/table-assignment.html">Table Assignment</a></li>
+        <li><a href="HTML/idol_assignment.html">IDol Assignment</a></li>
     </ol>
 </body>
 </html>
