ali & star Assignment

--- a/Student Project/index.html
+++ b/Student Project/index.html
@@ -100,20 +100,36 @@
          <div class="book_row">
             <div class="book_column">
                 <i class="fas fa-book-open book_icon"></i>
-                <p>COMMUNICATE</p>
-                <p>if you're considering whether to do a postgraduate degree, probably a lot of question</p>
+                <p class="communicate_p">COMMUNICATE</p>
+                <p class="p_p">if you're considering whether to do <br> a postgraduate degree, probably a <br> lot of question.</p>
             </div>
-            <div class="book_column">
-                <i class="fa-solid fa-book"></i>
-                <p>COMMUNICATE</p>
-                <p>if you're considering whether to do a postgraduate degree, probably a lot of question</p>
+            <div class="book_column" id="graduation_column">
+                <i class="fas fa-graduation-cap book_icon" id="graduation_icon"></i>
+                <p class="communicate_p">ONLINE COURSES</p>
+                <p class="p_p">if you're considering whether to do <br> a postgraduate degree, probably a <br> lot of question.</p>
             </div>
-            <div class="book_column">
-                <i class="fa-solid fa-book"></i>
-                <p>COMMUNICATE</p>
-                <p>if you're considering whether to do a postgraduate degree, probably a lot of question</p>
+            <div class="book_column" id="teacher_column">
+                <i class="fas fa-chalkboard-teacher book_icon" id="teacher_icon"></i>
+                <p class="communicate_p">TOP INSTRUCTORS</p>
+                <p class="p_p">if you're considering whether to do <br> a postgraduate degree, probably a <br> lot of question.</p>
             </div>
          </div>
-         <br><br>
+         <!-- end book_row -->
+
+         <!-- start university -->
+            <div class="start_university">
+                <h1 class="university_h1">AROUNG THE UNIVERSITY</h1>
+                <P class="university_p">See what goes aroud our university</P>
+                <hr>
+            </div>
+
+            <div>
+                <img src="image/course2-1-251x197.jpg" alt="course" width="1200" height="550" class="course_img">
+                <div class="course_header">
+                    <h1>Learning Online Becomes Easier For Students</h1>
+                    <p>For students of all majors , on-compus television station brings the screen alive through first-rate facilities and real-world experience</p>
+                </div>
+            </div>
+            <br><br>
 </body>
 </html>
