Star & Ali Assignment

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <li><a href="HTML/idol_assignment.html">IDol Assignment</a></li>
         <li><a href="CSS Project/index.html">CSS Project Sample</a></li>
         <li><a href="Javascript/Positive_Negative.html">Js Even Odd Assignment</a></li>
+        <li><a href="Javascript/ali_star_assignment.html">Star & Ali Assignment</a></li>
     </ol>
 </body>
 </html>
